--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "file-loader": "^0.9.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-google-maps": "^6.0.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.5",
