--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors --hot --config ./webpack.config.js"
+    "start": "webpack-dev-server --progress --colors --hot --config ./webpack.config.js",
+    "build": "NODE_ENV=production webpack -p --progress --colors --config ./webpack.prod.config.js",
   },
   "babel": {
     "presets": [
