--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --colors --hot --config ./webpack.config.js",
-    "build": "NODE_ENV=production webpack -p --progress --colors --config ./webpack.prod.config.js"
+    "build": "SET NODE_ENV=production webpack -p --progress --colors --config ./webpack.prod.config.js"
   },
   "babel": {
     "presets": [
