--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --colors --hot --config ./webpack.config.js",
-    "build": "webpack -p --progress --colors --config ./webpack.prod.config.js"
+    "build": "webpack -p --progress --colors --config ./webpack.prod.config.js node server.js"
   },
   "babel": {
     "presets": [
