--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --hot --config ./webpack.config.js",
     "build": "webpack --config ./webpack.prod.config.js --progress --colors",
+    "postinstall": "webpack --config ./webpack.prod.config.js --progress --colors",
     "start": "node ./server.js"
   },
   "babel": {
