--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.15.0",
     "express": "^4.14.0",
+    "express-history-api-fallback": "^2.0.0",
     "file-loader": "^0.9.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
