--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
+    "css-loader": "^0.25.0",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
@@ -31,6 +33,7 @@
     "express": "^4.14.0",
     "express-history-api-fallback": "^2.0.0",
     "file-loader": "^0.9.0",
+    "rc-collapse": "^1.6.9",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-google-maps": "^6.0.1",
